force-app/main/default/objects/Sales_Target__c/Sales_Target__c.object-meta.xml
<CustomObject>
    <label>Objetivo de Venta</label>
    <nameField>
        <label>Sales_Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objetivos de Venta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>