force-app/main/default/objects/Sales_Target__c/fields/Mes__c.field-meta.xml
<CustomField>
    <fullName>Mes__c</fullName>
    <label>Mes</label>
    <type>Date</type>
</CustomField>