force-app/main/default/objects/Sales_Target__c/fields/Objetivo__c.field-meta.xml
<CustomField>
    <fullName>Objetivo__c</fullName>
    <label>Objetivo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>